--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build and run unit tests
         run: |
-          mvn clean install
+          mvn clean install -Dlicense.skip=true
 
       - name: Build ThingsBoard Docker image
         run: |
